<resources>
    <string name="app_name">BridgeBuilder</string>
    <string name="loading_puzzle">Loading puzzle</string>
    <string name="recreate_all_puzzles">Recreate all puzzles</string>
    <string name="recreate_all_puzzles_message">Are you sure you want to delete and recreate all puzzles? This cannot be undone, and removes all user created puzzles</string>
    <string name="reset_all_puzzles">Reset all puzzles</string>
    <string name="reset_all_puzzles_message">Are you sure you want to reset all puzzles? This cannot be undone</string>
    <string name="reset_puzzle">Reset puzzle</string>
    <string name="reset_puzzle_message">Are you sure you want to reset this puzzle? This cannot be undone</string>
    <string name="delete_puzzle">Delete puzzle</string>
    <string name="delete_puzzle_message">Are you sure you want to delete this puzzle? This cannot be undone</string>
    <string name="deleting_all_puzzles">Deleting all puzzles</string>
    <string name="generating_puzzles">Generating puzzles</string>
    <string name="loading_puzzles">Loading puzzles</string>
    <string name="resetting_all_puzzles">Resetting all puzzles</string>
    <string name="saving_puzzle">Saving puzzle</string>
    <string name="deleting_puzzle">Deleting puzzle</string>
    <string name="solution_could_not_be_found">Solution could not be found</string>
    <string name="could_not_load_puzzle">Could not load puzzle</string>
    <string name="could_not_find_solution">Could not find solution</string>
    <string name="puzzle_solved">Puzzle solved!</string>
    <string name="enter_min_island_count">Please enter a minimum island count</string>
    <string name="enter_max_island_count">Please enter a maximum island count</string>
    <string name="min_island_count_must_be_2">Minimum island count must be at least 2</string>
    <string name="max_island_count_cannot_be_below_min">Maximum island count cannot be lower than minimum island count</string>
    <string name="generating_puzzle">Generating puzzle</string>
    <string name="enter_puzzle_name">Please enter a puzzle name</string>
    <string name="puzzle_already_exists">A puzzle with this name already exists</string>
    <string name="puzzle_saved">Puzzle saved</string>
    <string name="error_saving_puzzle">Error while saving puzzle</string>
    <string name="title">Title</string>
    <string name="state">State</string>
    <string name="generate">Generate</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="minimum_islands">Minimum islands</string>
    <string name="maximum_islands">Maximum islands</string>
    <string name="custom_seed_optional">Custom seed (optional)</string>
    <string name="reset">Reset</string>
    <string name="help">Help</string>
    <string name="recreate_puzzles">Recreate puzzles</string>
    <string name="create_random_puzzle">Create random puzzle</string>
    <string name="play">Play</string>
    <string name="view_create_solution">View/create solution</string>
    <string name="delete">Delete</string>
    <string name="goal_of_game_header">The goal of the game</string>
    <string name="goal_of_game_content">The goal of the game is to connect all the islands with the corresponding number of bridges such that all islands are directly or indirectly connected to each other. Each island has a number on it indicating how many bridges it must be connected to.</string>
    <string name="building_bridges_header">Building bridges</string>
    <string name="building_bridges_content">When an island is tapped it gets an blue color. Now the other island between which you want to build the bridge must be tapped. Cancel the building by tapping the blue island again. It’s only possible to connect island that are horizontally or vertically aligned. It’s not allowed to cross bridges or islands. You can build up to two bridges between two islands. When an island has too few bridges connected to it, it has an gray color. When it has too many bridges connected to it, it has an yellow color. When it has the right amount of bridges it will be green. You can also double up an existing bridge by tapping that bridge.</string>
    <string name="deleting_bridges_header">Deleting bridges</string>
    <string name="deleting_bridges_content">It’s possible to delete bridges by tapping and holding that bridge for some time. When there are two bridges between two island only one gets deleted by tapping and holding the bridges. Another way to delete bridges is by tapping and holding an island. When the island gets a red color you can tap the other island of the bridge you want to delete. Again only one of the two bridges will be deleted when there are two bridges between the island. Cancel the deletion by tapping the red island again.</string>
    <string name="puzzle_solved_title">Puzzle solved</string>
    <string name="puzzle_solved_message">Congratulations, you solved the puzzle! Return to the puzzle library?</string>
</resources>
