<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/puzzle_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/generate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        app:layout_constraintTop_toBottomOf="@id/puzzle_preview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/save_button"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/puzzle_preview"
        app:layout_constraintLeft_toRightOf="@id/generate_button"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/puzzle_name_label"
        android:labelFor="@id/puzzle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/generate_button"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/puzzle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/puzzle_name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </EditText>

    <TextView
        android:id="@+id/min_islands_label"
        android:labelFor="@id/min_islands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum_islands"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/puzzle_name"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/min_islands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="4"
        app:layout_constraintTop_toBottomOf="@id/min_islands_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </EditText>

    <TextView
        android:id="@+id/max_islands_label"
        android:labelFor="@id/max_islands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_islands"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/min_islands"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/max_islands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="64"
        app:layout_constraintTop_toBottomOf="@id/max_islands_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </EditText>

    <TextView
        android:id="@+id/seed_label"
        android:labelFor="@id/seed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_seed_optional"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/max_islands"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/seed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        app:layout_constraintTop_toBottomOf="@+id/seed_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>